@@ -1,5 +1,6 @@
 2009-05-01
 	* Added diskio_avg_samples patch (thanks Yeon-Hyeong)
+	* Fixed $texeci regression
 
 2009-04-30
 	* Added $combine, a var that places 2 other vars next to each other, even if they
